<resources>
    <string name="app_name">Tweeter</string>

    <string name="logoutMenuTitle">Logout</string>

    <string name="homePageTitle">Home</string>
    <string name="userImageContentDescription">The user\'s image</string>

    <string name="title_activity_main">Tweeter</string>
    <string name="loadingData">Loading More Data…</string>
    <string name="feedTabTitle">Feed</string>
    <string name="storyTabTitle">Story</string>
    <string name="followingTabTitle">Following</string>
    <string name="followersTabTitle">Followers</string>

    <string name="sampleAlias">"@UserAlias"</string>
    <string name="sampleUserName">The User</string>
    <string name="title_activity_login">Sign in</string>
    <string name="followeeCount">Following: %d</string>
    <string name="followerCount">Followers: %d</string>
    <string name="login_label">Login</string>
    <string name="register_label">Register</string>
    <string name="app_title">tweeter</string>
    <string name="username_label">\@username</string>
    <string name="password_label">password</string>
    <string name="first_name_label">first name</string>
    <string name="last_name_label">last name</string>
    <string name="take_profile_picture">Take Profile Picture</string>
    <string name="story_creation_date">February 17 2021 8:57 PM</string>
    <string name="status_message">Post: This is a default status</string>
    <string name="title_activity_user">Tweeter</string>
    <string name="followButton">Follow</string>
    <string name="unfollowButton">Unfollow</string>
    <string name="cancel">Cancel</string>
    <string name="post">Post</string>
    <string name="start_following_user_labe">Follow</string>
    <string name="following_user_label">Following</string>
</resources>
