<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.main.fragments.StoryFragment"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/userImage_Story"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/userImageContentDescription"/>

    <TextView
        android:id="@+id/userName_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:paddingLeft="10sp"
        tools:text="@string/sampleUserName"
        app:layout_constraintStart_toEndOf="@id/userImage_Story"/>

    <TextView
        android:id="@+id/userAlias_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/sampleAlias"
        android:paddingLeft="10sp"
        app:layout_constraintStart_toEndOf="@id/userName_story"/>

    <TextView
        android:id="@+id/postDateInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/story_creation_date"
        android:paddingLeft="10sp"
        app:layout_constraintTop_toBottomOf="@+id/userAlias_story"
        app:layout_constraintStart_toEndOf="@id/userImage_Story"/>

    <TextView
        android:id="@+id/statusMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userImage_Story"
        android:textSize="18sp"
        android:singleLine="false"
        android:ellipsize="none"
        android:padding="10sp"
        tools:text="@string/status_message"
        app:layout_constraintTop_toBottomOf="@+id/postDateInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>