<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".view.main.fragments.follow.following.FollowingFragment">

    <ImageView
        android:id="@+id/userImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerVertical="true"
        android:contentDescription="@string/userImageContentDescription" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:layout_toEndOf="@id/userImage"
        android:layout_toRightOf="@id/userImage">

        <LinearLayout
            android:id="@+id/UserData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:Layout_aboveOf="@id/">

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/sampleUserName"
                android:layout_marginRight="35px"/>

            <TextView
                android:id="@+id/userAlias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/sampleAlias" />
        </LinearLayout>

        <TextView
            android:id="@+id/postDateInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/story_creation_date" />

    </LinearLayout>


</RelativeLayout>